# telegram_project

./: main.spec  nome_do_seu_arquivo.spec  pyproject.toml  telegram_messages.xlsx  tete.session
telegram_project/: main.py
